编写登录页面 增减全局样式重置normalize.css 增加style全局样式处理 修正tslint报错

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vue/cli-plugin-typescript": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
+    "normalize.css": "^8.0.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "typescript": "~3.8.3",
