feat: 改造 TableLayout 为ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "src/shims-vue.d.ts",
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
