--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:watch": "npm run serve -- --watch",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
