--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.13.2",
     "js-md5": "^0.7.3",
+    "node-forge": "^0.10.0",
+    "serialize-javascript": "^3.1.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1",
