--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@vue/composition-api": "^0.6.4",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.2",
+    "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
     "node-forge": "^0.10.0",
     "serialize-javascript": "^3.1.0",
