--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "normalize.css": "^8.0.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "typescript": "~3.8.3",
+    "typescript": "^4.0.5",
     "vue-template-compiler": "^2.6.11"
   }
 }
