--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^2.13.2",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
+    "lodash.merge": "^4.6.2",
     "node-forge": "^0.10.0",
     "serialize-javascript": "^3.1.0",
     "vue": "^2.6.11",
@@ -28,6 +29,7 @@
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
+    "@types/lodash.merge": "^4.6.6",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-plugin-typescript": "~4.3.0",
