--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-md5": "^0.7.3",
     "lodash.merge": "^4.6.2",
     "node-forge": "^0.10.0",
+    "qiankun": "^2.3.3",
     "serialize-javascript": "^3.1.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
